# host

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  bvtree.cpp  defs.hpp  main.cpp  model.cpp  model_io.cpp  scene.cpp  utils.hpp
tests/: jeep.mtl  jeep.scene  jeep_v2.mtl  jeep_v2.scene  spheres.mtl  spheres.scene  spheres_v2.mtl  spheres_v2.scene  tcptest.cpp  test.mif  test.mtl  test.scene
